test killian + patch tests + add dependency pom + patch .sh add javafx + bug menu + organisateur menu